--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
   <nav><li><a href="About.html">About</li></a></nav>
   <nav><li><a href="Blog.html">Blog</li></a></nav>
   <nav><li><a href="Gallery.html">Gallery</a></li></nav>
-  <li><a>Contact</a>
+  <nav><li><a href="Contact.html">Contact</a>
     <ul>
         <li><a>Map</a></li>
         <li><a>Directions</a></li>
     </ul>
- </li>
+ </li></nav>
   
   </ul>
   <div class="handle">Menu</div>
@@ -47,7 +47,7 @@
  <div id="footer">
  <p>&copy; Kigali, Rwanda 2018 </p>
  <a href="https://www.facebook.com/">My facebook </a><br>
-<a href="www.linkedin.com/in/oscar-uwayo-591626bb">Linkedin</a><br>
+<a href="https://www.linkedin.com/in/oscar-uwayo">Linkedin</a><br>
  <script>
 document.write("The current date and time:");
 var time= new Date();
