--- a/Gallery.html
+++ b/Gallery.html
@@ -8,12 +8,12 @@
 <body>
 <div id="container"">
    <div id="sliderbox">
-      <img src="pic1.jpg"/>
-      <img src="pic2.jpg"/>
-      <img src="pic3.jpg"/>
+      <img src="pic1.jpg" width="500" height="600"/>
+      <img src="pic2.jpg" width="500" height="600"/>
+      <img src="pic3.jpg" width="500" height="600"/>
       <img src="pic4.jpg" width="500" height="600"/>
-      <img src="pic5.jpg"/>
-      <img src="pic6.jpg"/>
+      <img src="pic5.jpg" width="500" height="600"/>
+      <img src="pic6.jpg" width="500" height="600"/>
     </div>
 </div>
 </html>
