--- a/About.html
+++ b/About.html
@@ -17,7 +17,7 @@
  I completed my high school at Liquidnet Family High School. 
  My daily life, I am motivated by challenges and excited by innovation, 
  my aspiration is to work in artificial intelligence systems or cybersecurity.
- Currently, I am learning to program robotics, android application, and web development. 
+ Currently, I am learning to program robots, android application, and web development. 
 	  </section>
 	  </body>
 </html>
